tests/purs/failing/InstanceChainBothUnknownAndMatch.out
Error found:
in module [33mInstanceChains.BothUnknownAndMatch[0m
at tests/purs/failing/InstanceChainBothUnknownAndMatch.purs:17:13 - 17:55 (line 17, column 13 - line 17, column 55)

  No type class instance was found for
  [33m                                                       [0m
  [33m  InstanceChains.BothUnknownAndMatch.Same (RProxy      [0m
  [33m                                             ( m :: Int[0m
  [33m                                             , u :: t3 [0m
  [33m                                             )         [0m
  [33m                                          )            [0m
  [33m                                          (RProxy      [0m
  [33m                                             ( m :: Int[0m
  [33m                                             , u :: Int[0m
  [33m                                             )         [0m
  [33m                                          )            [0m
  [33m                                          t4           [0m
  [33m                                                       [0m

while applying a function [33msame[0m
  of type [33mSame @Type @Type t0 t1 t2 => t0 -> t1 -> SProxy t2[0m
  to argument [33mRProxy[0m
while inferring the type of [33msame RProxy[0m
in value declaration [33mexample[0m

where [33mt3[0m is a rigid type variable
        bound at (line 0, column 0 - line 0, column 0)
      [33mt4[0m is an unknown type
      [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt2[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

